# TriviaBackEnd

./: .dockerignore  .env.docker  .env.example  .flake8  .gitignore  .vercelignore  ARCHITECTURE.md  CLEANUP_SUMMARY.md  Dockerfile  E2EE_CLIENT_IMPLEMENTATION.md  E2EE_CONFIG_REFERENCE.md  E2EE_OPERATIONAL_RUNBOOK.md  E2EE_QA_CHECKLIST.md  ENV_VARIABLES.md  FRONTEND_CHAT_IMPLEMENTATION_GUIDE.md  GROUPS_STATUS_OPERATIONAL_RUNBOOK.md  GROUPS_STATUS_QA_CHECKLIST.md  IN_APP_NOTIFICATIONS_GUIDE.md  LEGACY_TABLES_ANALYSIS.md  LEGACY_TABLES_DELETION_SUMMARY.md  LIVE_CHAT_IMPLEMENTATION_SUMMARY.md  LIVE_CHAT_TESTING_GUIDE.md  LIVE_CHAT_USAGE_GUIDE.md  OCI_DEPLOYMENT.md  PERFORMANCE.md  PRODUCTION_DEPLOYMENT.md  README-stripe.md  README-wallet.md  README.md  README_COSMETICS.md  README_profile_update.md  README_stripe_integration.md  REDIS_SETUP_GUIDE.md  RENDER_INSTRUCTIONS.md  STORE_CLEANUP_ANALYSIS.md  STORE_CLEANUP_SUMMARY.md  STRIPE_OVERHAUL_PROGRESS.md  TEST_ENDPOINTS_README.md  UNIFIED_DRAW_SYSTEM.md  WITHDRAWAL_README.md  (+78 more)
.mypy_cache/: missing_stubs
.trace_coverage_draw/: _collections_abc.cover  _distutils_hack.__init__.cover  _pytest._code.code.cover  _pytest._code.source.cover  _pytest._io.terminalwriter.cover  _pytest._io.wcwidth.cover  _pytest._py.path.cover  _pytest.assertion.__init__.cover  _pytest.assertion.rewrite.cover  _pytest.cacheprovider.cover  _pytest.capture.cover  _pytest.compat.cover  _pytest.config.__init__.cover  _pytest.config.compat.cover  _pytest.config.findpaths.cover  _pytest.deprecated.cover  _pytest.faulthandler.cover  _pytest.fixtures.cover  _pytest.legacypath.cover  _pytest.logging.cover  _pytest.main.cover  _pytest.mark.structures.cover  _pytest.monkeypatch.cover  (+345 more)
(+1897 files in other folders)
