[tool.black]
line-length = 88
exclude = '''
(
  /(
      \.git
    | \.venv
    | venv
    | build
    | dist
    | alembic
    | migrations
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 88
skip = ["alembic", "migrations", ".venv", "venv", "build", "dist"]

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true
disable_error_code = [
  "return-value",
  "import-untyped",
  "union-attr",
  "valid-type",
  "assignment",
  "attr-defined",
  "arg-type",
  "dict-item",
  "call-arg",
  "var-annotated",
  "operator",
  "index",
  "type-var",
  "misc",
  "call-overload",
]
exclude = '(^|/)(alembic|migrations)/|(^|/)auth\\.py$'

[tool.mypy-redis]
ignore_missing_imports = true

[tool.mypy-redis.asyncio]
ignore_missing_imports = true

[tool.mypy-redis.exceptions]
ignore_missing_imports = true

[project]
name = "triviapay-backend"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "fastapi==0.109.2",
  "uvicorn==0.27.1",
  "sqlalchemy==2.0.27",
  "alembic==1.13.1",
  "python-dotenv==1.0.1",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==3.2.2",
  "PyJWT==2.8.0",
  "cryptography>=42.0.0",
  "python-multipart==0.0.18",
  "requests==2.32.4",
  "descope>=1.7.0",
  "asyncpg>=0.29.0",
  "greenlet>=3.0.0",
  "pg8000==1.31.5",
  "apscheduler==3.10.4",
  "pytz==2024.1",
  "tzlocal==5.2",
  "pydantic==2.6.1",
  "pydantic-settings==2.1.0",
  "pytest==8.3.5",
  "pytest-asyncio==1.2.0",
  "aiosqlite==0.20.0",
  "boto3==1.34.131",
  "redis[hiredis]>=5.0.0",
  "pusher==3.3.0",
  "httpx==0.25.0",
  "bleach>=6.0.0",
  "google-auth>=2.23.0",
  "google-api-python-client>=2.100.0",
]
